--- a/trunk/netpanzer/TODO
+++ b/trunk/netpanzer/TODO
@@ -12,6 +12,7 @@ Next release:
 -display a message when the round is over ("blabla captured xx% of outposts,
         "time is over", "blabla reached xxx frags")
 -in objective mode show number of objectives captured/needed to win
+-remember to disable packet debugger
 
 *** New Masterserver code
  * add new options to only show servers which are not empty, with a certain map
