added pidfile options and uppercased old options so it would be similar than from --help output

--- a/trunk/netpanzer/docs/netpanzer.6
+++ b/trunk/netpanzer/docs/netpanzer.6
@@ -27,33 +27,35 @@ The following options are supported.
 .LP 
 .TP 15
 .B -h, --help
-show usage instructions.
+Shows usage instructions.
 .TP
 .B     --version
-show version information.
+Shows version information.
 .TP
 .B -c, --connect=VALUE
-directly connect to the specified server.
+Connects directly to the specified server.
 .TP
 .B -d, --dedicated
-run as dedicated server.
+Runs as dedicated server.
 .TP
 .B -b, --bot=VALUE
-connect as bot to specific server.
+Connects as bot to specific server.
 .TP
 .B -p, --port=VALUE
-run server on specified port. (the server uses TCP and UDP connections)
+Runs server on specified port. (the server uses TCP and UDP connections)
 .TP
 .B -g, --debug
-enable debug output.
+Enables debug output.
 .B     --master_server=VALUE
-use the specified master server. You can use 'none' if you don't want to
+Uses the specified master server. You can use 'none' if you don't want to
 use master server.
 .B     --game_config=VALUE
-use the specified file as config file. Only files from the netpanzer's config 
+Uses the specified file as config file. Only files from the netpanzer's config 
 directory can be used.
 .B     --protocol
-show version of network protocol.
+Shows version of network protocol.
+.B     --pidfile=/directory/file
+Creates a pidfile at the specified location.
 .PD
 
 .SH "AUTHORS"
