--- a/trunk/netpanzer/TODO
+++ b/trunk/netpanzer/TODO
@@ -1,5 +1,13 @@
 Next release:
 -after having a full nodelist in A* the server is getting slow
+-make 1024x768 default resolution
+-output more stuff in infothread (time until end, flags for players, number of
+    outposts...)
+-update server text (no knetpanzerbrowser anymore)
+-fix infothread always reporting 0 as score
+-server status command returns wrong player names (after some
+    connects/disconnects)
+-netpanzer fails on win98se
 
 *** New Masterserver code
  * add new options to only show servers which are not empty, with a certain map
@@ -18,7 +26,9 @@ Next release:
  * the Server has a massive memory leak somewhere - might be fixed now
  * impelement 'initialunits' param in PlayerUnitConfig::initialize()
  * synchronize resources between server and clients, both should have same flags
-   collection and map. Let them automatically download these things.             
+   collection and map. Let them automatically download these things.
+ * server console doesn't react really way with all the messages of players
+   scrolling by...
 *** Improvements   
  * Use gettext and translate netpanzer
  * Add special chars to functions displaying text that allow to set text
