--- a/trunk/netpanzer/TODO
+++ b/trunk/netpanzer/TODO
@@ -6,7 +6,7 @@ Next release:
 -server status command returns wrong player names (seems to happen after sudden
         client disconnects)
 -netpanzer fails on win98se
--win32 doesn't show time in serverlogs - should be ok, needs testing
+-win32 doesn't show time in serverlogs - ok
 -you can't move panzers around on ppc (also often connection errors on ppc:
         <cypmac> cyp@itouch:~$ netpanzer -c 194.167.156.7
         <cypmac> open /dev/sequencer: No such device
