small README update

--- a/trunk/netpanzer/README
+++ b/trunk/netpanzer/README
@@ -89,8 +89,8 @@ screen.
 
 3. Gameplay
 
-This section needs to be written... Use the Help button in the game for now or
-trust your intuition :)
+This section needs to be written... Press F1 in the game for a quick overview of
+keys and in general trust your intuition :)
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
