lots of small things for release

--- a/trunk/netpanzer/README
+++ b/trunk/netpanzer/README
@@ -22,9 +22,10 @@ time.
 1.1 A bit of history
 The original development of netpanzer was done from PyroSoft inc. Though in
 1999 they stop development and released the game 2002 in GPL and it was nearly
-forgotten, until Ingo announce it at tux game tome. Soon after this announcement
-a group of coders did the linux port in roughly 2 weeks, with another 2 weeks
-polishing for this release. Now we'll go along and improve the game...
+forgotten, until Ingo announce it at happypenguin.org. Soon after this
+announcement a group of coders did the linux port in roughly 2 weeks, with
+another 2 weeks polishing for this release. Now we'll go along and improve the
+game...
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
