--- a/trunk/netpanzer/ChangeLog
+++ b/trunk/netpanzer/ChangeLog
@@ -1,3 +1,5 @@
+... ChangeLog is not up to date...
+
 5-Oct-2004 by Matthias Braun
 - more cleanups
 - fix dedicated server not updateing internal masterserverlist
