--- a/trunk/netpanzer/ChangeLog
+++ b/trunk/netpanzer/ChangeLog
@@ -1,4 +1,10 @@
 ... ChangeLog is not up to date...
+21-Feb-2004 by Matthias Braun
+- fixed 2 more endianess typos
+- added more sanity checking to prevent cheating
+- fixed typo in NetMessageEncoder which resulted in TerminalCommands being sent
+  out to clients in server hosting mode
+- more cleanups all around the place
 
 15-Feb-2004 by Matthias Braun
 - fixed typo in UnitIniSyncMessage packet, had to increase network protocol
