some gcc4 warning fixes, remove regen bar from outpost build info as this info was basically the same as the build time displayed at the bottom of the window

--- a/trunk/netpanzer/README
+++ b/trunk/netpanzer/README
@@ -182,9 +182,7 @@ This example shows how you can play locally against 2 bots:
 netpanzer -d &
 netpanzer -b localhost &
 netpanzer -b localhost &
-netpanzer
-
-... now press multiplayer and join to server address localhost ...
+netpanzer -c localhost
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
