--- a/trunk/netpanzer/TODO
+++ b/trunk/netpanzer/TODO
@@ -9,6 +9,7 @@ Next release:
   -> can't do much here... I can't see any error in this part of the code
 -create a new netpanzer-music package which adds pronobozos music to the game
 -shorten time netpanzer is trying to access the masterserver
+-compile SDL_mixer on windows with mp3 and ogg support
 
 *** Miscelaneous
  * I had an offer from http://forgottenhope.bf1942files.com/main.html people to
