--- a/trunk/netpanzer/TODO
+++ b/trunk/netpanzer/TODO
@@ -14,6 +14,8 @@ Next release:
 -make sure flag resolution works correctly (2 players with same flags). Someone
 reported that after someone else joined he could only build panzers with
 different flags, while his old tanks stayed the same.
+-you get wrong capture messages when capturing an outpost that belonged to a
+player that just left the game.
 
 *** Miscelaneous
  * I had an offer from http://forgottenhope.bf1942files.com/main.html people to
