update for MacOSX frameworks by BenUrban

--- a/trunk/netpanzer/TODO
+++ b/trunk/netpanzer/TODO
@@ -16,6 +16,7 @@ reported that after someone else joined he could only build panzers with
 different flags, while his old tanks stayed the same.
 -you get wrong capture messages when capturing an outpost that belonged to a
 player that just left the game.
+-update homepage to link to svn and not cvs
 
 *** Miscelaneous
  * I had an offer from http://forgottenhope.bf1942files.com/main.html people to
