harmonize network code to use SOCKET type for all sockets. This mainly fixes some warnings on win32

--- a/trunk/netpanzer/TODO
+++ b/trunk/netpanzer/TODO
@@ -18,6 +18,87 @@ different flags, while his old tanks stayed the same.
 player that just left the game.
 -update homepage to link to svn and not cvs
 
+[22:43:23]      <BenUrban>      woohoo
+[22:43:26]      <BenUrban>      caught SIGABRT
+[22:43:30]      <BenUrban>      in debugger :D
+[22:45:17]      <BenUrban>      UnitInterface::offloadGraphics(SpriteSorter &)...
+[22:45:41]      <BenUrban>      UnitInterface.cpp:274
+[22:45:59]      <BenUrban>      t->unit->offloadGraphics(sorter);
+[22:50:47]      <BenUrban>      Program received signal:  "SIGABRT".
+[22:50:47]      <BenUrban>      pure virtual method called
+[22:50:49]      <BenUrban>      SIGH
+[23:04:46]      <BenUrban>      virtual void offloadGraphics(SpriteSorter& ) = 0;
+[23:04:47]      <BenUrban>      hmm
+[23:05:05]      *       BenUrban wonders if there's an easy way to inspect what class this particular object is
+[23:06:28]      <BenUrban>      hmm
+[23:06:34]      <BenUrban>      it says it's a UnitBase object
+[23:07:02]      <BenUrban>      of unit_type 2...
+[23:11:02]      <BenUrban>      hmm
+[23:11:13]      <BenUrban>      it must be an actual UnitBase object
+[23:11:26]      <BenUrban>      since the only direct subclass of UnitBase is Vehicle
+[23:11:39]      <BenUrban>      and that does have an offloadGraphics method
+[23:11:42]      <BenUrban>      so...
+[23:11:45]      <BenUrban>      the question...
+[23:11:59]      <BenUrban>      is why did the compilet allow it to create a UnitBase object?
+[23:12:04]      <BenUrban>      *compiler
+[23:12:07]      <BenUrban>      hmm
+[23:12:18]      <BenUrban>      and where did it create it?
+[23:16:29]      <BenUrban>      hmm
+[23:27:09]      <BenUrban>      looks like it's supposed to be a Titan
+[23:41:58]      *       BenUrban exited the debugger
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 *** Miscelaneous
  * I had an offer from http://forgottenhope.bf1942files.com/main.html people to
    share/use their models and sounds in a freeware like license (ie. copyright
