Changes: - Added a send buffer, actually 32k it gets full some time, will need to check why, but it makes less clients to drop - Added checks in UDP code for some unchecked errors, it would make the client crash when browsing for servers (actually happened in Windows) - Added more information to the InfoSocket, the game version and the player points, still not used by server browsers. - Removed some compiling warnings - Fix problem that would make clients and servers to try to check out-of-map positions and fail an assert (and quit the game) - Fix problem in ServerSocket that would games to crash, creating empty players. - Disabled proxy functions until they are working - Fix problem when one player host a game (not dedicated) the first connected player wouldn't be able to move his units - Fix problem when receiving data from players, if the size (in the protocol) was incorrect it wouldn't receive anymore correct data from that player, and eventually disconnect - Fix problem when client connects to a server, if the server returns some error, like server full, the client would use 100% CPU for some seconds - Fix problem when syncing the units to a new player, if new tanks are created, this player would received it twice (one with sync command, one with create command). Now only send it once - Syncing units when a player connects to a game would re-sync all the units to all the players, now don't sync. - When Syncing units to a new player now less information and smaller packets are sent. Instead of Sync message a Create message is sent, as i found the information is the same and other information is Sync message was not used.

--- a/trunk/netpanzer/TODO
+++ b/trunk/netpanzer/TODO
@@ -25,7 +25,7 @@ player that just left the game.
 *** Network
  * Analyse if TCP was really a good choice. Question:
     - what happens if a client can't keep up with the bandwith, will it stall
-      the server?
+      the server? (kromxp: no, it will be dropped from server)
  * An UDP protocol would need to be designed (taking a look at TNL or raknet
    would also be a good idea)
 
@@ -38,6 +38,7 @@ player that just left the game.
     - done
  * the Server has a massive memory leak somewhere - might be fixed now
  * impelement 'initialunits' param in PlayerUnitConfig::initialize()
+     - kromxp: this is done, but in other way.
  * synchronize resources between server and clients, both should have same flags
    collection and map. Let them automatically download these things.
  * server console doesn't react really way with all the messages of players
@@ -117,3 +118,5 @@ player that just left the game.
    defend an objective would be things that come to mind
  * make panzers always hit their targets instead of missing moving units?
 
+kromxp:
+   wow i have also many of the same ideas explained here.
